# =============================================================================
# CMakeLists.txt для проекта 01-blink (Raspberry Pi Pico / RP2040)
# =============================================================================

# Требуем минимальную версию CMake
cmake_minimum_required(VERSION 3.15)

# =============================================================================
# Настройки Pico SDK
# =============================================================================
# Указываем целевую плату и платформу
set(PICO_BOARD pico)
set(PICO_PLATFORM rp2040)

# Подключаем вспомогательный скрипт импорта Pico SDK
include(pico_sdk_import.cmake)

# =============================================================================
# Объявление проекта
# =============================================================================
project(01_blink C CXX ASM)

# Инициализация Pico SDK (должна быть после project())
pico_sdk_init()

# =============================================================================
# Сборка исполняемого файла
# =============================================================================
# Создаём целевой исполняемый файл из исходников
add_executable(01_blink
    ${CMAKE_CURRENT_SOURCE_DIR}/main.c
)

# Подключаем необходимые библиотеки Pico SDK
target_link_libraries(01_blink
    pico_stdlib        # базовая библиотека: gpio, sleep, stdio
    hardware_gpio      # низкоуровневый доступ к GPIO (опционально, т.к. входит в pico_stdlib)
)

# =============================================================================
# Настройки компоновщика и вывода
# =============================================================================
# Указываем скрипт компоновщика для корректной разметки памяти
pico_set_linker_script(01_blink ${CMAKE_CURRENT_SOURCE_DIR}/memmap_rp2040.ld)

# Генерируем дополнительные форматы вывода: .uf2, .bin, .hex
pico_add_extra_outputs(01_blink)