# =============================================================================
# CMakeLists.txt для проекта 02-printf (Raspberry Pi Pico / RP2040)
# =============================================================================

# Требуем минимальную версию CMake
cmake_minimum_required(VERSION 3.15)

# =============================================================================
# Настройки Pico SDK
# =============================================================================

# Указываем целевую плату и платформу
set(PICO_BOARD pico)
set(PICO_PLATFORM rp2040)

# Подключаем Pico SDK
include(pico_sdk_import.cmake)

# =============================================================================
# Объявление проекта
# =============================================================================

# ВАЖНО: имя проекта задаётся здесь
project(02_printf C CXX ASM)

# Инициализация SDK
pico_sdk_init()

# =============================================================================
# Сборка исполняемого файла
# =============================================================================

add_executable(${PROJECT_NAME}
    ${CMAKE_CURRENT_SOURCE_DIR}/main.c
)

# Подключаем библиотеки
target_link_libraries(${PROJECT_NAME}
    pico_stdlib
    hardware_gpio
)

# =============================================================================
# Настройки компоновщика
# =============================================================================

pico_set_linker_script(
    ${PROJECT_NAME}
    ${CMAKE_CURRENT_SOURCE_DIR}/linker_rp2040.ld
)

# =============================================================================
# Настройка stdio через USB (ТРЕБОВАНИЕ ЗАДАНИЯ)
# =============================================================================

pico_enable_stdio_uart(${PROJECT_NAME} 0)
pico_enable_stdio_usb(${PROJECT_NAME} 1)

# =============================================================================
# Генерация файлов прошивки
# =============================================================================

pico_add_extra_outputs(${PROJECT_NAME})